--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Heriniaina Mathieu",
   "license": "ISC",
   "dependencies": {
+    "@formatjs/intl": "^3.1.3",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -14,6 +15,7 @@
     "@types/node": "^12.20.13",
     "@types/react": "^17.0.7",
     "@types/react-dom": "^17.0.5",
+    "@types/react-intl": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -50,7 +52,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.1.7",
-    "@babel/plugin-proposal-private-property-in-object":"^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/react-router-dom": "^5.1.7"
   }
 }
