--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "ISC",
   "dependencies": {
     "@formatjs/intl": "^3.1.3",
+    "@reduxjs/toolkit": "^2.5.1",
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -18,6 +19,7 @@
     "@types/react-intl": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "7.2.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.2.4",
